--- a/.github/workflows/teste.yml
+++ b/.github/workflows/teste.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
+      - name: Check Node.js version
+        run: node -v
+
       - name: Install dependencies
         run: npm install
 
