Iniciando com dockerhub

--- a/lab03_docker/docker-compose.yml
+++ b/lab03_docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   app:
-    image: <seu usuario do dockerhub>/webacademy:latest
+    image: sennafox/webacademy_docker:latest
     container_name: webacademydemo
     restart: always
     ports:
